DDF-1707 resolved findbugs issues and activated findbugs profile